--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Solutions Notes",
+  "name": "Notes",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+    "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
@@ -18,8 +13,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#3a6aca"
 }
